# nla-thought-anchors

./: .gitignore  README.md  contains-final-answer.py  counterfactual-nla.py  generate-nla.py  generate-original-response.py  inference.py  pyproject.toml
src/nla_thought_anchors/: __init__.py
src/nla_thought_anchors/sanity-checks/: sanity-check-nla-7B.py
